# hermes-foundry-memory-plugin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
hermes_foundry_memory/: __init__.py  breaker.py  client.py  config.py  maf_adapter.py  maf_memory_store.py  provider.py  storage.py  tools.py
tests/: conftest.py  test_azure_memory_store.py  test_breaker.py  test_client.py  test_contract.py  test_maf_adapter.py  test_provider.py  test_register.py  test_storage.py  test_sync.py  test_tools.py
